      field is wrapped onto a new line. Thanks to Mattia Rizzolo for the
      report.  (Closes: #879977)
  * checks/cruft.desc:
    + [CL] Add example on how to remove trailing whitespace with sed.
    + [CL] Drop README.source from files to check against the
      file-contains-trailing-whitespace tag as it can include quotes
      from upstream that would be ideally left intact.

 -- Chris Lamb <lamby@debian.org>  Fri, 27 Oct 2017 20:00:29 +0100

lintian (2.5.56) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - appstream-metadata-invalid
      - debhelper-tools-from-autotools-dev-are-deprecated
      - debian-control-has-empty-field
      - debian-rules-sets-dpkg-architecture-variable
      - empty-section-field
      - file-contains-trailing-whitespace
      - init.d-script-contains-skeleton-template-content
      - latest-changelog-entry-without-new-date

  * checks/appstream-metadata.{pm,desc}:
    + [CL] Don't error out when AppStream metadata is invalid and emit new
      appstream-metadata-invalid tag instead.  (Closes: #879661)
  * checks/binaries.desc:
    + [CL] Apply patch from Adrian Bunk to mention the lack of the "-g"
      flag as a common cause for the debug-file-with-no-debug-symbols tag.
      (Closes: #878806)
    + [CL] Apply patch from Guillem Jover to strongly discourage the use
      of the getconf(1) interface for LFS support.  (Closes: #879935)
  * checks/changes-file.desc:
    + [CL] Add a note to orig-tarball-missing-upstream-signature regarding
      support in pristine-tar and git-buildpackage.
  * checks/conffiles.pm, checks/{debconf,files,scripts}.desc:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to fix a
      number of spelling mistakes.  (Closes: #878446)
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to update
      a number of manual references.  (Closes: #878517)
  * checks/control-file.{pm,desc}: